# meta-business-suite-analysis

./: .gitignore  .mcp.json  AGENTS.md  README.md  conftest.py  pyproject.toml
.claude/: settings.json
agent-rules/: root.md  tickets.md
config/: meta_ads_accounts.json
data/normalized/: .gitkeep
docs/: ACCOUNT_SETUP.md  META_ACTION_WORKFLOW.md  META_API_SETUP.md  META_EXPORT_GUIDE.md  README.md
followups/: README.md
followups/divine_designs/: 2026-06-29-check_100k_20_percent_budget_scale_result_engaged_.md  2026-06-30-review_enable_and_evaluate_mission_call_ad.md  2026-07-01-decide_advantage_audience_reenable.md  2026-07-02-confirm_may_lower_spend_paused_0_spend_after_the_j.md  2026-07-07-discuss_creative_enhancement_a_b_test_with_user.md  2026-07-07-engaged_100k_settle_read_after_the_jul_1_freeze_do.md  2026-07-09-refresh_5_fatigued_creatives_manual_creative_work.md  2026-08-01-on_relaunch_scale_seasonal_winners_15_percent_camp.md
knowledge/: ARCHITECTURE.md  README.md  ad_copy_best_practices.md  learnings.md  video_ad_pipeline.md
prompts/: latest_meta_ads_analysis_prompt.md
reports/: .gitkeep
scripts/: detach.mjs  init.mjs  run-tess.sh  search.mjs
scripts/lib/: chunker.mjs  logging.mjs  model-selection.mjs  process.mjs  prompt.mjs  run-ticket.mjs  search-tools.d.mts
src/meta_ads_analysis/: __init__.py  __main__.py  account_registry.py  actions.py  analyze.py  authoring.py  briefs.py  cli.py  confidence.py  config.py  control.py  early_triage.py  experiment.py  followups.py  knowledge_provenance.py  mcp_server.py  meta_api.py  monitor.py  normalize.py  proposals.py  reader_provider.py  reporting.py  review.py  rotation.py  storage.py  sync_api.py  utils.py  video_intake.py  write_grounding.py
tess/: README.md  package-lock.json  package.json
tess/agent-rules/: search.md
tess/config/: agents.json
tess/docs/: DESIGN.md  INSTALLATION.md  SEARCH.md  STATUS.md
tess/scripts/: index.d.mts  index.mjs  mcp-search.mjs  migrate.mjs  run.mjs
tess/ui/: package-lock.json  vite.config.ts
tests/: test_meta_ads_analysis.py
tickets/backlog/: confidence-install-goal-significance-ops.md  confidence-install-goal-significance.md  confidence-sample-conversions-rename.md  enable-wrong-direction-install-goal.md  enable-wrong-direction-refutation.md  goal-aware-grounding-other-producers.md  mcp-azure-knowledge-store.md  mcp-cowork-distribution.md  mcp-netnew-create-grounding-override.md  mcp-role-based-access-tiers.md  monitor-steady-state-install-goal-classification.md  seattle-mission-reactivation-lead-metric.md  steady-state-watch-path-goal-aware-installs.md  vault-audit-segment-selector.md  wire-propose-budget-into-m-dispatch.md
tickets/complete/: 1-confidence-core.md  1-meta-read-provider.md  10-mcp-server-scaffold.md  11-mcp-read-tools.md  12-mcp-guarded-write-tools.md  12.5-mcp-guarded-write-authoring-rotation.md  13-mcp-local-approval-gate.md  14-mcp-local-run-guide.md  2-community-mcp-read-server.md  2-confidence-actions-analyze.md  2.5-confidence-monitor-experiment.md  3-confidence-operator-brief.md  3-guarded-write-evidence-scaffold.md  4-enable-and-set-status-write.md  4-grounding-rules-and-external-evidence.md  5-adversarial-review-gate.md  5-cbo-aware-budget-write.md  6-adversarial-review-protocol.md  6-authoring-evidence-reconcile.md  7-audience-rotation-evidence-reconcile.md  7-vault-provenance-format.md  8-vault-audit.md  8-write-config-registry-controls.md  9-hybrid-model-docs-and-tool-catalog.md  confidence-install-goal-significance-ops.md  confidence-install-goal-significance.md  confidence-sample-conversions-rename.md  early-life-forced-decision-install-goal.md  early-triage-core.md  early-triage-monitor-integration.md  enable-wrong-direction-install-goal.md  enable-wrong-direction-refutation.md  experiment-readout-json.md  goal-aware-grounding-other-producers.md  review-gate-install-goal-direction.md  rotation-apply-time-grounding-gate.md  steady-state-watch-goal-aware-installs.md  vault-audit-segment-selector.md  wire-propose-budget-into-m-dispatch.md
tickets/fix/: early-life-forced-decision-install-goal.md  rotation-apply-time-grounding-gate.md
tickets/implement/: 1-confidence-core.md  1-meta-read-provider.md  10-mcp-server-scaffold.md  11-mcp-read-tools.md  12-mcp-guarded-write-tools.md  12.5-mcp-guarded-write-authoring-rotation.md  13-mcp-local-approval-gate.md  14-mcp-local-run-guide.md  2-community-mcp-read-server.md  2-confidence-actions-analyze.md  2.5-confidence-monitor-experiment.md  3-confidence-operator-brief.md  3-guarded-write-evidence-scaffold.md  4-enable-and-set-status-write.md  4-grounding-rules-and-external-evidence.md  5-adversarial-review-gate.md  5-cbo-aware-budget-write.md  6-adversarial-review-protocol.md  6-authoring-evidence-reconcile.md  7-audience-rotation-evidence-reconcile.md  7-vault-provenance-format.md  8-vault-audit.md  8-write-config-registry-controls.md  9-hybrid-model-docs-and-tool-catalog.md  confidence-install-goal-significance-ops.md  confidence-install-goal-significance.md  confidence-sample-conversions-rename.md  early-life-forced-decision-install-goal.md  early-triage-core.md  (+10 more)
ui/: index.html  package.json  tsconfig.json
(+97 files in other folders)
