[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-ads-analysis"
version = "0.1.0"
description = "CSV-first Meta Ads analysis workflow with normalization, scoring, and report generation."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "duckdb>=1.2,<2",
  "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ingest_meta_exports = "meta_ads_analysis.cli:ingest_meta_exports_main"
build_meta_report = "meta_ads_analysis.cli:build_meta_report_main"
sync_meta_api = "meta_ads_analysis.cli:sync_meta_api_main"
propose_meta_actions = "meta_ads_analysis.cli:propose_meta_actions_main"
apply_meta_actions = "meta_ads_analysis.cli:apply_meta_actions_main"
propose_rotation = "meta_ads_analysis.cli:propose_rotation_main"
apply_rotation = "meta_ads_analysis.cli:apply_rotation_main"
propose_disable_advantage = "meta_ads_analysis.cli:propose_disable_advantage_main"
apply_disable_advantage = "meta_ads_analysis.cli:apply_disable_advantage_main"
propose_renames = "meta_ads_analysis.cli:propose_renames_main"
apply_renames = "meta_ads_analysis.cli:apply_renames_main"
inspect_account = "meta_ads_analysis.cli:inspect_main"
propose_enable_ads = "meta_ads_analysis.cli:propose_enable_ads_main"
apply_ops = "meta_ads_analysis.cli:apply_ops_main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
